--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
---extra-index-url https://download.pytorch.org/whl/cu117
-torch==2.0.0
-torchvision==0.15.0
+# --extra-index-url https://download.pytorch.org/whl/cu117
+--index-url https://download.pytorch.org/whl/cu124
+
+torch
+torchvision
+torchaudio
 omegaconf
-torchmetrics==0.10.3
+torchmetrics
 fvcore
 iopath
-xformers==0.0.18
+xformers
 submitit
 --extra-index-url https://pypi.nvidia.com
 cuml-cu11
