--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # --extra-index-url https://download.pytorch.org/whl/cu117
---index-url https://download.pytorch.org/whl/cu124
+# --index-url https://download.pytorch.org/whl/cu124
 
 torch
 torchvision
@@ -12,3 +12,4 @@ xformers
 submitit
 --extra-index-url https://pypi.nvidia.com
 cuml-cu11
+ipykernel
